--- a/flash-card-app/flash-card-app.csproj
+++ b/flash-card-app/flash-card-app.csproj
@@ -57,16 +57,22 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Compile Update="Views\CreateDeckPage.xaml.cs">
+	    <DependentUpon>CreateDeckPage.xaml</DependentUpon>
+	  </Compile>
+	  <Compile Update="Views\DeckPage.xaml.cs">
+	    <DependentUpon>DeckPage.xaml</DependentUpon>
+	  </Compile>
 	  <Compile Update="Views\HomePage.xaml.cs">
 	    <DependentUpon>HomePage.xaml</DependentUpon>
 	  </Compile>
 	</ItemGroup>
 
 	<ItemGroup>
-	  <MauiXaml Update="Views\CardDeckPage.xaml">
+	  <MauiXaml Update="Views\DeckPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
-	  <MauiXaml Update="Views\CreateCardDeckPage.xaml">
+	  <MauiXaml Update="Views\CreateDeckPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Views\CreateCardPage.xaml">
