rename & edit card wip

--- a/flash-card-app/flash-card-app.csproj
+++ b/flash-card-app/flash-card-app.csproj
@@ -78,6 +78,9 @@
 	  <MauiXaml Update="Views\CreateCardPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\EditCardPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\HomePage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
